%% Mermaid ER diagram for Inventory Sales Hub
erDiagram
    USER ||--o{ ORDER : places
    ORDER ||--|{ ORDERDETAILS : contains
    ORDERDETAILS }|--|| PRODUCT : references
    PRODUCT ||--o{ PRODUCTHISTORY : history_of
    PRODUCT }o--|| CATEGORY : belongs_to
    PRODUCT }o--|| SUPPLIER : supplied_by
    PRODUCT }o--|| STORE : stored_in
    ORDER ||--|| INVOICE : billed_by
    ORDER ||--|| PAY : paid_by
    USER }o--|| ROLE : has
